tests/models/enum/unnamed/f32/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        f32
    ),
}
fn main() {}
